prod/objects/Referentiel__c/Referentiel__c.object-meta.xml
<CustomObject>
    <label>Référentiel</label>
    <nameField>
        <label>Critères</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référentiels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>