prod/objects/Referentiel__c/fields/Notation_1_Faible_2_moyen_3_fort__c.field-meta.xml
<CustomField>
    <fullName>Notation_1_Faible_2_moyen_3_fort__c</fullName>
    <label>Notation (1 Faible;2 moyen;3 fort)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>