prod/objects/Referentiel__c/fields/Pond_ration_r_f_rentiel__c.field-meta.xml
<CustomField>
    <fullName>Pond_ration_r_f_rentiel__c</fullName>
    <label>Pondération référentiel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>