prod/objects/Referentiel__c/fields/TechFormuleCalculR_sultat__c.field-meta.xml
<CustomField>
    <fullName>TechFormuleCalculR_sultat__c</fullName>
    <label>TechFormuleCalculRésultat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formule 1</fullName>
            </value>
            <value>
                <fullName>Formule 2</fullName>
            </value>
            <value>
                <fullName>Formule3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>