prod/objects/Referentiel__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Pond_ration_r_f_rentiel__c</columns>
    <columns>Actif__c</columns>
    <columns>TechFormuleCalculR_sultat__c</columns>
    <columns>Trier_l_ordre_d_affichage_des_crit_res__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>